[package]
name = "quote-scorer"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.6.0", features = ["serde"] }
ordered-float = "4.4.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
